--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
             //        console.log("window.navigator.language",window.navigator.language);
 
             if (window.navigator.language == "zh-CN" || window.navigator.language == "zh-cn") {
-                document.title = "小游戏：合成小超越";
+                document.title = "小游戏：合成超级无敌可爱大猪头^(*￣(oo)￣)^";
             } else if (window.navigator.language == "zh-TW") {
-                document.title = "小遊戲：合成小超越";
+                document.title = "小遊戲：合成超级无敌可爱大猪头^(*￣(oo)￣)^";
             } else if (window.navigator.language == "zh-HK") {
-                document.title = "小遊戲：合成小超越";
+                document.title = "小遊戲：合成超级无敌可爱大猪头^(*￣(oo)￣)^";
             } 
             else {
                 document.title = "Little game：Synthetic ycy";
